# minor

./: README.md  instruct.md  uart.rar
ddram/: clk_wiz_v3_3.ejp  clk_wiz_v3_3.gise  clk_wiz_v3_3.vhd  clk_wiz_v3_3.vho  clk_wiz_v3_3.xco  clk_wiz_v3_3.xise  clk_wiz_v3_3_flist.txt  control_sameer.prj  control_sameer.stx  control_sameer.xst  control_sameer_summary.html  control_sameer_vhdl.prj  control_test.vhd  control_test_beh.prj  control_test_isim_beh.wdb  control_test_isim_beh1.wdb  control_test_stx_beh.prj  control_unit.cmd_log  control_unit.ngc  control_unit.ngr  control_unit.prj  control_unit.syr  control_unit.xst  control_unit_beh.prj  control_unit_ddr.vhd  control_unit_envsettings.html  control_unit_stx_beh.prj  control_unit_summary.html  control_unit_vhdl.prj  control_unit_xst.xrpt  dcm_clk.asy  dcm_clk.ejp  dcm_clk.gise  dcm_clk.vhd  dcm_clk.vhi  dcm_clk.vho  dcm_clk.xco  dcm_clk.xise  dcm_clk_arwz.ucf  dcm_clk_flist.txt  (+35 more)
ethcom/: .gitignore
ethcom/src/: CMakeLists.txt  a.out
grayscale/: genComp.vhd  grayscale.vhd
hello-world/: constrains.ucf  fuseRelaunch.cmd  hello-world.gise  hello-world.xise  pepExtractor.prj  simple.bgn  simple.bit  simple.bld  simple.cmd_log  simple.drc  simple.ncd  simple.ngc  simple.ngd  simple.ngr  simple.pad  simple.par  simple.pcf  simple.prj  simple.syr  simple.twr  simple.twx  simple.unroutes  simple.vhd  simple.xst  simple_bitgen.xwbt  simple_envsettings.html  simple_map.map  simple_map.mrp  simple_map.ncd  simple_map.ngm  simple_map.xrpt  simple_ngdbuild.xrpt  simple_pad.csv  simple_pad.txt  simple_par.xrpt  simple_summary.html  simple_usage.xml  simple_xst.xrpt  tb_helloworld.vhd  tb_helloworld_beh.prj  (+3 more)
inputModule2/: ad_gen_test.vhd  address_gen.vhd  address_sequencer.prj  apple.vhd  constraintFile.ucf  (+85 more)
orthoVII/source/: CMakeLists.txt  a.out  main.cpp  main.cpp~  meshLoader.cpp  meshLoader.cpp~  shader.cpp
(+798 files in other folders)
